// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-button-group aligns 1`] = `
<rux-button-group h-align="right">
  <mock:shadow-root>
    <div class="rux-button-group rux-button-group--right">
      <slot></slot>
    </div>
  </mock:shadow-root>
</rux-button-group>
`;

exports[`rux-button-group renders 1`] = `
<rux-button-group>
  <mock:shadow-root>
    <div class="rux-button-group rux-button-group--left">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <rux-button icon="" secondary="">
    <mock:shadow-root>
      <button class="rux-button rux-button--secondary" type="button">
        <slot></slot>
      </button>
    </mock:shadow-root>
    Button
  </rux-button>
  <rux-button icon="">
    <mock:shadow-root>
      <button class="rux-button rux-button--default" type="button">
        <slot></slot>
      </button>
    </mock:shadow-root>
    Button
  </rux-button>
</rux-button-group>
`;
